still fixing alignment

--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -10,7 +10,7 @@ p {
 
 #whole-body {
   width: 90%;
-  margin-left: 12%;
+  margin-left: 9%;
 }
 
 #header-both {
@@ -53,7 +53,7 @@ p {
   width: 100%;
   display: block;
   margin: auto;
-  margin-left: -7%;
+  margin-left: -12%;
 }
 
 
